# coursework-django

./: .env.sample  README.md  data.json  pyproject.toml  requirements.txt
blog/: models.py  urls.py  views.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_entry_delete.html  blog_entry_detail.html  blog_entry_form.html  blog_entry_list.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
mailing/: admin.py  form.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: get_emails.py  runapscheduler.py  send_mail.py  test.py  toggle_state.py
mailing/templates/mailing/: home.html  mailing_confirm_delete.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_form.html  message_list.html  recipient_delete.html  recipient_form.html  recipients_list.html
mailing/templatetags/: custom_tags.py
templates/: base.html
templates/includes/: inc_main_menu.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: create_manager.py
users/migrations/: 0001_initial.py
users/templates/users/: user_form.html  users_list.html  verification.html
