[tool.poetry]
name = "coursework-django"
version = "0.1.0"
description = ""
authors = ["grbcas <grbcas@gmail.com>"]
readme = "README.md"
packages = [{include = "coursework_django"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
